# hotel-concierge-agent

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml
.github/workflows/: ci.yml  deploy.yml
backend/: .env.example  Dockerfile  pyproject.toml  requirements.txt
backend/app/: main.py  observability.py
backend/app/agent/: graph.py  json_utils.py  state.py
backend/app/agent/nodes/: booking.py  extract_params.py  respond.py  retrieve.py  router.py
backend/app/data/: faqs.md  hotel_urls.txt  inventory.json  properties.json  properties.py  properties_scraped.json  scrape_tfe.py
backend/app/mcp/: booking_server.py
backend/app/rag/: ingest.py  retriever.py
backend/app/tools/: booking_api.py
backend/evals/: run_evals.py  test_conversations.json
backend/tests/: test_booking_api.py  test_json_utils.py  test_option_detection.py
frontend/: package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/api/chat/: route.ts
supabase/migrations/: 001_docs_table.sql
