[project]
name = "tfe-hotels-concierge"
version = "0.1.0"
description = "TFE Hotels Guest Concierge Agent — portfolio demo"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.12",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.2",
    "pydantic-settings>=2.5.2",

    # LLM + agent
    "anthropic>=0.39.0",
    "langgraph>=0.2.40",
    "langchain>=0.3.7",
    "langchain-anthropic>=0.2.4",
    "langchain-mcp-adapters>=0.1.0",

    # Embeddings + vector store
    "voyageai>=0.3.0",
    "psycopg[binary]>=3.2.3",
    "pgvector>=0.3.6",
    "fastmcp>=2.2.0",

    # Observability
    "structlog>=24.4.0",
    "python-json-logger>=2.0.7",

    # Utilities
    "python-dotenv>=1.1.0",
    "httpx>=0.28.1",
    "tenacity>=9.0.0",
    "beautifulsoup4>=4.12.0",
]

[dependency-groups]
dev = [
    "ruff>=0.8.0",
    "pyright>=1.1.390",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "basic"
